--- a/css/index.css
+++ b/css/index.css
@@ -24,19 +24,27 @@ div {
 
 .blockStyle {
     border: 1.2px double black;
+    background: -webkit-gradient(linear, right bottom, left top, from(#F5FF8F), to(#FF5B8E));
+    background: -webkit-linear-gradient(bottom right, #F5FF8F, #FF5B8E);
+    background: -o-linear-gradient(bottom right, #F5FF8F, #FF5B8E);
     background: linear-gradient(to top left, #F5FF8F, #FF5B8E);
-    box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+    -webkit-box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+            box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
     border-radius: 10px;
 }
 
 button {
+    background: -webkit-gradient(linear, right bottom, left top, from(#E8C18E), to(#8875F5));
+    background: -webkit-linear-gradient(bottom right, #E8C18E, #8875F5);
+    background: -o-linear-gradient(bottom right, #E8C18E, #8875F5);
     background: linear-gradient(to top left, #E8C18E, #8875F5);
     width: 90px;
     height: 45px;
     border-radius: 4px;
     cursor: pointer;
     text-transform: uppercase;
-    box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+    -webkit-box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+            box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
     outline: none;
 }
 
@@ -45,6 +53,9 @@ button:hover{
 }
 
 input {
+    background: -webkit-gradient(linear, right bottom, left top, from(#E8C18E), to(#8875F5));
+    background: -webkit-linear-gradient(bottom right, #E8C18E, #8875F5);
+    background: -o-linear-gradient(bottom right, #E8C18E, #8875F5);
     background: linear-gradient(to top left, #E8C18E, #8875F5);
     width: 40px;
 }
@@ -59,9 +70,13 @@ select {
 #popup{
 	width: 600px;
 	height: 300px;
+	background: -webkit-gradient(linear, right bottom, left top, from(#E8C18E), to(#8875F5));
+	background: -webkit-linear-gradient(bottom right, #E8C18E, #8875F5);
+	background: -o-linear-gradient(bottom right, #E8C18E, #8875F5);
 	background: linear-gradient(to top left, #E8C18E, #8875F5);
 	text-align: center;
-	box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+	-webkit-box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+	        box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
     border-radius: 10px;
     position: fixed;
     top: 100px;
@@ -72,6 +87,9 @@ select {
 #popup input{
 	width: 100px;
 	outline: none;
+	background: -webkit-gradient(linear, right bottom, left top, from(#F5FF8F), to(#FF5B8E));
+	background: -webkit-linear-gradient(bottom right, #F5FF8F, #FF5B8E);
+	background: -o-linear-gradient(bottom right, #F5FF8F, #FF5B8E);
 	background: linear-gradient(to top left, #F5FF8F, #FF5B8E);
 }
 
@@ -81,6 +99,9 @@ select {
 
 #passBtn{
 	height: 20px;
+	background: -webkit-gradient(linear, right bottom, left top, from(#F5FF8F), to(#FF5B8E));
+	background: -webkit-linear-gradient(bottom right, #F5FF8F, #FF5B8E);
+	background: -o-linear-gradient(bottom right, #F5FF8F, #FF5B8E);
 	background: linear-gradient(to top left, #F5FF8F, #FF5B8E);
 }
 
@@ -96,9 +117,13 @@ select {
 #modal{
     width: 200px;
     height: 60px;
+    background: -webkit-gradient(linear, right bottom, left top, from(#E8C18E), to(#8875F5));
+    background: -webkit-linear-gradient(bottom right, #E8C18E, #8875F5);
+    background: -o-linear-gradient(bottom right, #E8C18E, #8875F5);
     background: linear-gradient(to top left, #E8C18E, #8875F5);  
     text-align: center;
-    box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+    -webkit-box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+            box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
     border-radius: 10px;
     display: none;
     position: fixed;
@@ -226,4 +251,3 @@ div form{
 #listForm {
     display: none;
 }
-
